@@ -1479,7 +1479,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '218';
+$wgStyleVersion = '219';
 
 
 # Server-side caching:
